[tool.poetry]
name = "datahacking"
version = "0.1.0"
description = ""
authors = ["nachoconde <nachok@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
langchain = "0.0.334"
bs4 = "^0.0.1"
jsonlines = "^4.0.0"
lxml = "^4.9.3"
beautifulsoup4 = "^4.12.2"
pypdf = "^3.17.1"
streamlit = "^1.29.0"
tiktoken = "^0.5.1"
openai = "^1.3.6"
chromadb = "^0.4.18"
rank-bm25 = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "datahacking" },
]